--- a/rps.css
+++ b/rps.css
@@ -1,20 +1,25 @@
 #container{
    display: flex;
    flex-direction: column;
-   justify-content: center;
+   justify-content: space-between;
    align-items: center;
    height: 200px;
    border: 3px solid green;
+   margin-top: 20%;
+   padding: 0 32px;
 }
 
 button{
     width: 118px;
-    margin: auto;
     padding: 8px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 24px;
 }
 
-h3{
+h3, div{
     font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+#commentator, #scoreboard{
+    font-size: 18px;
 }
